<resources>
    <string name="app_name">tawkTest</string>

    <string name="search">Search</string>
    <string name="hint_search">Search&#8230;</string>
    <string name="details">Details</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="blog">Blog:</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="error_input_note">Please enter notes</string>
    <string name="success_input_note">Your notes are saved successfully.</string>
    <string name="no_users">No users found!</string>
    <string name="error_fetch_users">Failed to fetch users</string>
    <string name="error_fetch_user">Failed to fetch user</string>
    <string name="network_unavailable">Your network is unavailable.</string>
    <string name="network_connected">Your network is available now.</string>
</resources>