<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context=".view.UserDetailsActivity">

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUser">

        <LinearLayout
            android:id="@+id/layout_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_medium"
                android:text="@string/followers"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/txtFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginStart="@dimen/margin_medium"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layout_followers">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_medium"
                android:text="@string/following"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/txtFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:padding="@dimen/padding_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_follow"
        android:background="@drawable/bg_outline_gray">

        <TextView
            android:id="@+id/txtNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toEndOf="@+id/txtNameTitle"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtCompanyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/company"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNameTitle"/>

        <TextView
            android:id="@+id/txtCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/margin_normal"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toEndOf="@+id/txtCompanyTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtName"/>

        <TextView
            android:id="@+id/txtBlogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/blog"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCompanyTitle"/>

        <TextView
            android:id="@+id/txtBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="12dp"
            android:textColor="@color/hyperlink"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtBlogTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtCompany"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtNotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_user_info"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtNotes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotesTitle"
        android:background="@drawable/bg_edittext"
        android:padding="@dimen/padding_medium"
        android:gravity="top|start"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotes"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
